<resources>
    <string name="app_name">aRent</string>

    <!-- Счётчик общей суммы по услугам -->
    <string name="counter_label">Общая сумма: </string>

    <!-- Описание услуги -->
    <string name="name_service_label">Услуга</string>
    <string name="rate_label">Тариф:</string>
    <string name="amount_label">Объём:</string>
    <string name="sum_label">Сумма:</string>
    <string name="value_label">Значение:</string>

    <!-- Диалоговое окно добавления услуги-->
    <string name="add_dialog_title">Добавление новой услуги</string>
    <string name="name_service_hint">Название</string>
    <string name="rate_service_hint">Тариф</string>
    <string name="amt_service_hint">Объём потребления</string>

    <!-- Кнопка добавления новой услуги -->
    <string name="add_service_button">Добавить</string>

    <!-- Отмена для диалоговых окон -->
    <string name="cancel_service_button">Отмена</string>

    <string name="confirm_add_service_button">Добавить</string>

    <!-- Диалоговое окно удаления -->
    <string name="delete_dialog_title">Удаление выбранной услуги</string>
    <string name="confirm_delete_service_button">Удалить</string>

    <!-- Диалоговое окно реджактирования -->
    <string name="edit_dialog_title">Редактирование услуги</string>
    <string name="confirm_edit_service_button">Изменить</string>
</resources>
